Main-container width bug on mobile windows fixed.

--- a/ng_src/src/app/app.component.scss
+++ b/ng_src/src/app/app.component.scss
@@ -112,7 +112,12 @@ img.header-logo {
 
 @media only screen and (max-width: 768px) {
   .grid-container {
-    grid-template-columns: auto;
+    grid-template-columns: 100%;
+  }
+
+  #main-container {
+    grid-column: 1;
+    margin: 0px;
   }
 
   #sidebar-container {
